assets/css/_service.css
/* service */
.service-container {
  width: 100%;
  display: flex;
  flex-wrap: wrap;
  margin-bottom: 100px;
}
.service {
  width: 35%;
  margin-left: 2.5%;
  align-self: center;
}
.service h6 {
  color: #dfb15b;
  font-size: 20px;
  text-transform: uppercase;
  margin: 20px 0;
}
.service .service-title {
  color: #252531;
  font-size: 28px;
  position: relative;
  padding-left: 70px;
  margin: 20px 0;
}
.service .service-title::before {
  position: absolute;
  content: "";
  width: 60px;
  height: 4px;
  background: #dfb15b;
  top: 10px;
  left: 0;
}
.service p {
  color: #777777;
  line-height: 1.5;
  font-weight: 400;
  margin-bottom: 30px;
  font-size: 18px;
  letter-spacing: .5px;
}
.service .btn {
  width: 150px;
  padding: 15px 8px;
  color: #252531;
  background-color: #dfbe82;
  border: none;
  outline: none;
  font-size: 18px;
  margin-bottom: 100px;
  transition: all 0.3s ease-in-out;
}
.service .btn:hover {
  background-color: #dda53d;
  cursor: pointer;
}
.service-items {
  align-self: center;
  width: 60%;
  display: flex;
  flex-direction: row;
  column-gap: 15px;
  justify-content: center;
  align-items: center;
}
.service-item {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  background-color: #f3f6ff;
  padding: 30px 0px;
  width: 30%;
  transition: box-shadow 0.3s ease-in-out;
}
.service-item:hover {
  cursor: pointer;
  box-shadow: 0 10px 10px -10px rgba(0, 0, 0, 0.5);
}
.service-item img {
  width: 100%;
  height: 100px;
}

.service-item .header {
  width: 100%;
  border-top: 1px solid #f8e0b8;
  padding: 10px 10px;
  text-align: left;
}

.service-item .header i {
  color: #dda53d;
}

.service-item .header h3 {
  width: 100%;
  color: #252531;
  margin-bottom: 10px;
  margin-top: 10px;
  margin-left: 0;
  text-align: center;
}
.service-items .service-item p {
  color: #777777;
  width: 98%;
  line-height: 1.5;
  letter-spacing: 1px;
  padding: 0 10px;
}

@media screen and (max-width: 1200px) {
  .service-container {
    margin-bottom: 10px;
  }
  .service {
    width: 90%;
    margin-left: 5%;
  }
  .service-items {
    width: 90%;
    flex-wrap: wrap;
    gap: 15px;
    margin-left: 2.5%;
    margin-bottom: 50px;
  }
  .service-item {
    width: 30%;
  }
}
@media screen and (max-width: 780px) {
  .service-item  {
    width: 45%;
  }
}
@media screen and (max-width: 590px) {
  .service-items {
    margin-bottom: 50px;
  }
.service-item {
  width: 90%;
}
} 

